--- a/shangke/03/lounge.html
+++ b/shangke/03/lounge.html
@@ -6,7 +6,10 @@
     <link type="text/css" rel="stylesheet" href="lounge.css">
   </head>
   <body>
-    <p><img src="images/logo.gif" alt="Head First Lounge"></p>
+    <div>
+      <p><img src="images/logo.gif" alt="Head First Lounge"></p>
+    </div>
+    <div>
     <h1>Welcome to the Head First Lounge</h1>
     <p>
       The Head First Lounge is, no doubt, the biggest trendsetter in Webville. 
@@ -53,7 +56,8 @@
       to get you here in record time. No reservations necessary; 
       come and join us anytime.
     </p>
-
+    </div>
+    <div class="elixirs">
     <h2>Weekly Elixir Specials</h2>
     <p>
       <img src="images/yellow.gif" alt="Lemon Breeze Elixir">
@@ -93,7 +97,8 @@
       <a href="beverages/elixir.html" 
          title="Head First Lounge Elixirs">elixirs</a>.
     </p>
-
+    </div>
+    <div>
     <h2>What's playing at the Lounge</h2>
     <p>
       We're frequently asked about the music we play at the lounge, and no wonder, 
@@ -101,17 +106,19 @@
       Enjoy.
     </p>
     <ul>
-      <li>Buddha Bar, Claude Challe</li>
-      <li>When It Falls, Zero 7</li>
-      <li>Earth 7, L.T.J. Bukem</li>
-      <li>Le Roi Est Mort, Vive Le Roi!, Enigma</li>
-      <li>Music for Airports, Brian Eno</li>
+      <li><span class="cd">Buddha Bar</span>, <span class="artist">Claude Challe</span></li>
+      <li><span class="cd">When It Falls</span>, <span class="artist">Zero 7</span></li>
+      <li><span class="cd">Earth 7, L.T.J</span>. <span class="artist">Bukem</span></li>
+      <li><span class="cd">Le Roi Est Mort, Vive Le Roi!</span>, <span class="artist">Enigma</span></li>
+      <li><span class="cd">Music for Airports</span>, <span class="artist">Brian Eno</span></li>
     </ul>
-
+    </div>
+    <div>
     <p>
       &copy; 2012, Head First Lounge<br>
       All trademarks and registered trademarks appearing on this site are 
       the property of their respective owners.
     </p>
+    </div>
   </body>
 </html>
