给wde增加新的文件

--- a/wde/003/003.html
+++ b/wde/003/003.html
@@ -1,16 +1,11 @@
 <html>
   <head>
     <title>Head First Lounge</title>
-    <style>
-      p{
-        background-color: grey;
-        border: 1pc solid red;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="003.css">
     </head>
     <body>
       <h1>Welcome to the Head First Lounge</h1>
-      <img src="images/drinks.gif">
+      <img src="drinks.gif">
       <p>
         Join us any evening for 
         refreshing elixirs,
