07增加新的文件

--- a/shangke/07/index.html
+++ b/shangke/07/index.html
@@ -11,6 +11,13 @@
       <div class="header">
         <img src="images/header.gif" alt="Starbuzz Coffee header image">
       </div>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="blog.html">BLOG</a></li>
+        <li><a href="">INVENTIONS</a></li>
+        <li><a href="">RECIPES</a></li>
+        <li><a href="">LOCATIONS</a></li>
+      </ul>
       <div class="award">
         <img src="271award.gif" alt="Roaster of the Year award">
       </div>
