更新期末作业

--- a/期末作业/Minecraft.html
+++ b/期末作业/Minecraft.html
@@ -7,9 +7,20 @@
   </head>
 
   <body>
-    <h1>最新消息</h1>
-    <p>查看全部新闻</p>
-   
-    
+    <div class="good">
+      <div>
+        <h1>最新消息</h1>
+        <p><a href="good.html">查看全部新闻</a></p>
+      </div>
+      <div class="mi">
+        <img src="图片/1.avif" alt="图片1">
+        <h2>NEW5</h2>
+        <p>Flat world presets for Bedrock</p>
+        <p>Explore a Snowy Kingdom, a Bottomless Pit, and more!</p>
+      </div>
+      <div class="ma">
+        <img src="图片/2.avif" alt="图片2">
+      </div>
+    </div>
   </body>
 </html>
