--- a/期末作业/Minecraft.html
+++ b/期末作业/Minecraft.html
@@ -8,29 +8,13 @@
 
   <body>
     <div>
-      <div>
         <h1>最新消息</h1>
         <p><a href="good.html">查看全部新闻</a></p>
-      </div>
-      <div class="mi">
-        <img src="图片/1.avif" alt="图片1">
-        <img src="图片/2.avif" alt="图片2">
-        <img src="图片/3.avif" alt="图片3">
-        <img src="图片/4.jpg" alt="图片4">
-        <img src="图片/5.webp" alt="图片5">
-        <img src="图片/6.avif" alt="图片6">
-        <img src="图片/7.avif" alt="图片7">
-        <img src="图片/8.avif" alt="图片8">
-        <img src="图片/9.avif" alt="图片9">
-        <img src="图片/10.avif" alt="图片10">
-      </div>
-      <div class="ma">
-        <h2>NEW5</h2>
-        <p>Flat world presets for Bedrock</p>
-        <p>Explore a Snowy Kingdom, a Bottomless Pit, and more!</p>
-      
-        <h2></h2>
-      </div>
+    </div>
+    <div class="mi">
+        <p1>DEEP DIVE5</p1>
+        <p2>Causing a Cold Commotion</p2>
+        <p2>Chapter 2 Takes us Somewhere New</p2>
     </div>
   </body>
 </html>
