--- a/期末作业 2/Minecraft.html
+++ b/期末作业 2/Minecraft.html
@@ -23,37 +23,27 @@
         <img src="图片/9.avif" alt="图片9">
         <img src="图片/10.avif" alt="图片10">
     </div>
-    <div class="v">
-      <one>
-        <p1>DEEP DIVE5</p1>
-        <P2>Causing a Cold Commotion</P2>
-        <p2>Chapter 2 Takes us Somewhere New</p2>
-      </one>
-      <two>
-        <p1>DEEP DIVE5</p1>
-        <p2>Block of the Month: Red Mushroom</p2>
-        <p2>Build yourself a massive fungal home</p2>
-      </two>
-      <three>
-        <p1>NEW5</p1>
-        <p2>Flat world presets for Bedrock</p2>
-        <p2>Explore a Snowy Kingdom, a Bottomless Pit, and more!</p2>
-      </three>
-      <four>
-        <p1>MARKETPLACE</p1>
-        <p2>Marketplace Content: May 2025</p2>
-        <p2>Let's channel surf this month's Marketplace Pass and Realms Plus</p2>
-      </four>
-      <five>
-        <p1>NEW5</p1>
-        <p2>Minecraft Bedrock Edition 1.21.80</p2>
-        <p2>Minecraft Bedrock Edition 1.21.80 Update</p2>
-      </five>
-      <six>
-        <p1>NEW5</p1>
-        <p2>Minecraft Snapshot 25w19a</p2>
-        <p2>A Minecraft Java Shapshot</p2>
-      </six>
+    <div>
+      <div class="v">
+        <h3>DEEP DIVE5</h3>
+        <h2>Causing a Cold Commotion</h2>
+        <p1>Chapter 2 Takes us Somewhere New</p1>
+      </div>
+      <div class="a">
+        <h3>DEEP DIVE5</h3>
+        <h2>Block of the Month: Red Mushroom</h2>
+        <p1>Build yourself a massive fungal home</p1>
+      </div>
+      <div class="b">
+        <h3>NEW5</h3>
+        <h2>Flat world presets for Bedrock</h2>
+        <p1>Explore a Snowy Kingdom, a Bottomless Pit, and more!</p1>
+      </div>
+      <div class="c">
+        <h3>MARKETPLACE</h3>
+        <h2>Marketplace Content: May 2025</h2>
+        <p1>Let's channel surf this month's Marketplace Pass and Realms Plus</p1>
+      </div>
     </div>
   </body>
 </html>
