--- a/期末作业/Minecraft.html
+++ b/期末作业/Minecraft.html
@@ -12,9 +12,10 @@
         <p><a href="good.html">查看全部新闻</a></p>
     </div>
     <div class="mi">
+      <img src="图片/1.avif" alt="Minecraft">
         <p1>DEEP DIVE5</p1>
         <p2>Causing a Cold Commotion</p2>
-        <p2>Chapter 2 Takes us Somewhere New</p2>
+        <p2 class="o">Chapter 2 Takes us Somewhere New</p2>
     </div>
   </body>
 </html>
