--- a/期末作业 2/Minecraft.html
+++ b/期末作业 2/Minecraft.html
@@ -43,5 +43,10 @@
       <h2>Marketplace Content: May 2025</h2>
       <p1>Let's channel surf this month's Marketplace Pass and Realms Plus</p1>
     </div>
+    <div class="d">
+        <p1>NEW5</p1>
+        <p2>Minecraft Bedrock Edition 1.21.80</p2>
+        <p2>Minecraft Bedrock Edition 1.21.80 Update</p2>
+      </div>
   </body>
 </html>
