--- a/期末作业 2/Minecraft.html
+++ b/期末作业 2/Minecraft.html
@@ -8,45 +8,75 @@
 
   <body>
     <div>
-        <h1>最新消息</h1>
-        <p><a href="good.html">查看全部新闻</a></p>
+        <h1>WHAT'S NEW</h1>
+        <p><a href="good.html">See all the news ↗</a></p>
     </div>
     <div class="mi">
-        <img src="图片/1.avif" alt="图片1">
-        <img src="图片/2.avif" alt="图片2">
-        <img src="图片/3.avif" alt="图片3">
-        <img src="图片/4.jpg" alt="图片4">
-        <img src="图片/5.webp" alt="图片5">
-        <img src="图片/6.avif" alt="图片6">
-        <img src="图片/7.avif" alt="图片7">
-        <img src="图片/8.avif" alt="图片8">
-        <img src="图片/9.avif" alt="图片9">
-        <img src="图片/10.avif" alt="图片10">
+      <img src="图片/1.avif" alt="图片1">
+      <img src="图片/2.avif" alt="图片2">
+      <img src="图片/3.avif" alt="图片3">
+      <img src="图片/4.jpg" alt="图片4">
+      <img src="图片/5.webp" alt="图片5">
+      <img src="图片/6.avif" alt="图片6">
+      <img src="图片/7.avif" alt="图片7">
+      <img src="图片/8.avif" alt="图片8">
+      <img src="图片/9.avif" alt="图片9">
+      <img src="图片/10.avif" alt="图片10">
     </div>
     <div class="v">
-        <h3>DEEP DIVE5</h3>
-        <h2>Causing a Cold Commotion</h2>
-        <p1>Chapter 2 Takes us Somewhere New</p1>
+      <h3>DEEP DIVE5</h3>
+      <h2>Causing a Cold Commotion</h2>
+      <h4>Chapter 2 Takes us Somewhere New</h4>
     </div>
     <div class="a">
       <h3>DEEP DIVE5</h3>
       <h2>Block of the Month: Red Mushroom</h2>
-      <p1>Build yourself a massive fungal home</p1>
+      <h4>Build yourself a massive fungal home</h4>
     </div>
     <div class="b">
       <h3>NEW5</h3>
       <h2>Flat world presets for Bedrock</h2>
-      <p1>Explore a Snowy Kingdom, a Bottomless Pit, and more!</p1>
+      <h4>Explore a Snowy Kingdom, a Bottomless Pit, and more!</h4>
     </div>
     <div class="c">
       <h3>MARKETPLACE</h3>
       <h2>Marketplace Content: May 2025</h2>
-      <p1>Let's channel surf this month's Marketplace Pass and Realms Plus</p1>
+      <h4>Let's channel surf this month's Marketplace Pass and Realms Plus</h4>
     </div>
     <div class="d">
-        <p1>NEW5</p1>
-        <p2>Minecraft Bedrock Edition 1.21.80</p2>
-        <p2>Minecraft Bedrock Edition 1.21.80 Update</p2>
-      </div>
+      <h3>NEW5</h3>
+      <h2>Minecraft Bedrock Edition 1.21.80</h2>
+      <h4>Minecraft Bedrock Edition 1.21.80 Update</h4>
+    </div>
+    <div class="e">
+      <h3>NEW5</h3>
+      <h2>Minecraft Snapshot 25w19a</h2>
+      <h4>A Minecraft Java Shapshot</h4>
+    </div>
+    <div class="f">
+      <h3>NEW5</h3>
+      <h2>Minecraft Bedrock Edition 1.21.80</h2>
+      <h4>Minecraft Bedrock Edition 1.21.80 Update</h4>
+    </div>
+    <div class="g">
+      <h3>DEEP DIVE5</h3>
+      <h2>Simply the Best</h2>
+      <h4>Chapter 3:More Things to See</h4>
+    </div>
+    <div class="h">
+      <h3>DEEP DIVE5</h3>
+      <h2>Building Blocks:Abandoned Village</h2>
+      <h4>Wait, where did everyone go?</h4>
+    </div>
+    <div class="i">
+      <h3>NEW5</h3>
+      <h2>New cape alert</h2>
+      <h4>Sign in with your Microsoft account and earn a unique reward!</h4>
+    </div>
+    <div class="ku">
+      <img src="图片/ku.avif" alt="图片11">  
+      <h5>Need to re-download?</h5>
+      <h6>Already own a game,but need a launcher? Looking for a Linux distribution or server file? Please check the Downloads page.</h6>
+    </div>
   </body>
 </html>
