--- a/期末作业/Minecraft.html
+++ b/期末作业/Minecraft.html
@@ -8,14 +8,21 @@
 
   <body>
     <div>
-        <h1>最新消息</h1>
-        <p><a href="good.html">查看全部新闻</a></p>
+      <h1>WHAT'S NEW</h1>
+      <p><a href="good.html">See all the news ↗</a></p>
     </div>
-    <div class="mi">
-      <img src="图片/1.avif" alt="Minecraft">
-        <p1>DEEP DIVE5</p1>
-        <p2>Causing a Cold Commotion</p2>
-        <p2 class="o">Chapter 2 Takes us Somewhere New</p2>
+    <div class="m">
+      <img src="图片/1.avif" alt="图片2">
+      <h3>DEEP DIVE5</h3>
+      <h2>Causing a Cold Commotion</h2>
+      <h4>Chapter 2 Takes us Somewhere New</h4>
     </div>
+    <div class="a">
+      <img src="图片/2.avif" alt="图片3">
+      <h3>DEEP DIVE5</h3>
+      <h2>Block of the Month: Red Mushroom</h2>
+      <h4>Build yourself a massive fungal home</h4>
+  </div>
+</div>
   </body>
 </html>
