--- a/期末作业/Minecraft.html
+++ b/期末作业/Minecraft.html
@@ -14,15 +14,19 @@
     <div class="dae">
       <div class="m">
         <img src="图片/1.avif" alt="图片2">
-        <h3>DEEP DIVE5</h3>
-        <h2>Causing a Cold Commotion</h2>
-        <h4>Chapter 2 Takes us Somewhere New</h4>
+        <div class="go">
+          <h3>DEEP DIVE5</h3>
+          <h2>Causing a Cold Commotion</h2>
+          <h4>Chapter 2 Takes us Somewhere New</h4>
+        </div>
       </div>
       <div class="m">
         <img src="图片/2.avif" alt="图片3">
-        <h3>DEEP DIVE5</h3>
-        <h2>Block of the Month: Red Mushroom</h2>
-        <h4>Build yourself a massive fungal home</h4>
+        <div class="go">
+          <h3>DEEP DIVE5</h3>
+          <h2>Block of the Month: Red Mushroom</h2>
+          <h4>Build yourself a massive fungal home</h4>
+        </div>
       </div>
     </div>
   </body>
