--- a/期末作业/Minecraft.html
+++ b/期末作业/Minecraft.html
@@ -28,6 +28,81 @@
           <h4>Build yourself a massive fungal home</h4>
         </div>
       </div>
+      <div class="m">
+        <img src="图片/3.avif" alt="图片3">
+        <div class="go">
+          <h3>NEW5</h3>
+          <h2>Minecraft Bedrock Edition 1.21.80</h2>
+          <h4>Minecraft Bedrock Edition 1.21.80 Update</h4>
+        </div>
+      </div>
+      <div class="m">
+        <img src="图片/4.jpg" alt="图片4">
+        <div class="go">
+          <h3>NEW5</h3>
+          <h2>Minecraft Snapshot 25w19a</h2>
+          <h4>A Minecraft Java Shapshot</h4>
+        </div>
+      </div>
+      <div class="m">
+        <img src="图片/5.webp" alt="图片5">
+        <div class="go">
+          <h3>NEW5</h3>
+          <h2>Dreamscape Escape</h2>
+          <h4>chapter 4:We're Back for More</h4>
+        </div>
+      </div>
+      <div class="m">
+        <img src="图片/6.avif" alt="图片6">
+        <div class="go">
+          <h3>NEW5</h3>
+          <h2>Flat world presets for Bedrock</h2>
+          <h4>Explore a Snowy Kingdom, a Bottomless Pit, and more!</h4>
+        </div>
+      </div>
+      <div class="m">
+        <img src="图片/7.avif" alt="图片7">
+        <div class="go">
+          <h3>DEEP DIVE5</h3>
+          <h2>Simply the Best</h2>
+          <h4>Chapter 3:More Things to See</h4>
+        </div>
+      </div>
+      <div class="m">
+        <img src="图片/8.avif" alt="图片8">
+        <div class="go">
+          <h3>DEEP DIVE5</h3>
+          <h2>Building Blocks:Abandoned Village</h2>
+          <h4>Wait,where did everyone go?</h4>
+        </div>
+      </div>
+      <div class="m">
+        <img src="图片/9.avif" alt="图片9">
+        <div class="go">
+          <h3>MARKETPLACE</h3>
+          <h2>Marketplace Content:May 2025</h2>
+          <h4>Let's channel surf this month's Marketplace Pass and Realms Plus</h4>
+        </div>
+      </div>
+      <div class="m">
+        <img src="图片/10.avif" alt="图片10">
+        <div class="go">
+          <h3>NEW5</h3>
+          <h2>Craftable saddies and fresh music</h2>
+          <h4>Make travel prep a breeze while you enjoy smooth tunes</h4>
+        </div>
+      </div>
+    </div>
+    <div class="ye">
+      <div class="ku">
+        <div class="kuli">
+          <h5>Need to re-download?</h5>
+          <h6>Already own a game,but need a launcher? Looking for a Linux distribution or server file? Please check the </h6>
+          <h6>Downloads page.</h6>
+          <h7><a href="dod.htmlO">GO TO DOWNLOADS 》</a></h7>
+        </div>
+        <img src="图片/ku.avif" alt="图片11">
+      </div>
     </div>
   </body>
 </html>
