上传新的文件

--- a/拼接网页/3/Minecraft.html
+++ b/拼接网页/3/Minecraft.html
@@ -12,16 +12,16 @@
         <p><a href="good.html">See all the news ↗</a></p>
     </div>
     <div class="mi">
-      <img src="图片/1.avif" alt="图片1">
-      <img src="图片/2.avif" alt="图片2">
-      <img src="图片/3.avif" alt="图片3">
-      <img src="图片/4.jpg" alt="图片4">
-      <img src="图片/5.webp" alt="图片5">
-      <img src="图片/6.avif" alt="图片6">
-      <img src="图片/7.avif" alt="图片7">
-      <img src="图片/8.avif" alt="图片8">
-      <img src="图片/9.avif" alt="图片9">
-      <img src="图片/10.avif" alt="图片10">
+      <img src="图片 copy/1.avif" alt="图片1">
+      <img src="图片 copy/2.avif" alt="图片2">
+      <img src="图片 copy/3.avif" alt="图片3">
+      <img src="图片 copy/4.jpg" alt="图片4">
+      <img src="图片 copy/5.webp" alt="图片5">
+      <img src="图片 copy/6.avif" alt="图片6">
+      <img src="图片 copy/7.avif" alt="图片7">
+      <img src="图片 copy/8.avif" alt="图片8">
+      <img src="图片 copy/9.avif" alt="图片9">
+      <img src="图片 copy/10.avif" alt="图片10">
     </div>
     <div class="v">
       <h3>DEEP DIVE5</h3>
@@ -74,7 +74,7 @@
       <h4>Sign in with your Microsoft account and earn a unique reward!</h4>
     </div>
     <div class="ku">
-      <img src="图片/ku.avif" alt="图片11">  
+      <img src="图片 copy/ku.avif" alt="图片11">  
       <h5>Need to re-download?</h5>
       <h6>Already own a game,but need a launcher? Looking for a Linux distribution or server file? Please check the Downloads page.</h6>
     </div>
