--- a/dd/.html
+++ b/dd/.html
@@ -12,9 +12,9 @@
       <img src="2.svg" alt="图片">
       <img src="3.svg" alt="图片">
       <img src="1.png" alt="图片">
-      <h1>ソーシャルメディアディレクトリ(英語で利用可能)</h1>
+      <h1><a href="dd">ソーシャルメディアディレクトリ(英語で利用可能)</a></h1>
     </div>
-      
+    <div class="booo">
     <ul>
       <li><a href="dd">出版物</a></li>
       <li><a href="dd"> 招聘信息</a></li>
@@ -29,5 +29,13 @@
       <img src="logo.svg" alt="图片">
         <h3>〒606-8501 京都市左京区吉田本町京都 日本</h3>
         <h3>電話番号:075-753-7531></h3>
+    </div>
+    <div class="mmmm">
+      <h5><a href="dd">安否確認システム</a></h5>
+      <h5><a href="dd">スタッフポータル</a></h5>
+    </div>
+    </div>
+    <div class="fooo">
+      <h6>Copyright © 京都大学. 全著作権所有。</h6>
     </div>
 </body>
